GDC-95 Domain types content wrapping issue fixed

--- a/ui/ui-app/src/main/resources/static/assets/app.css
+++ b/ui/ui-app/src/main/resources/static/assets/app.css
@@ -1598,3 +1598,13 @@ mat-list-item>div{
   width:100%;
 }
 
+.matchPatterns .CodeMirror-scroll .CodeMirror-sizer {
+  min-width: auto !important;
+}
+
+.matchPatterns .CodeMirror-scroll .CodeMirror-sizer .CodeMirror-line {
+  text-overflow: ellipsis;
+  width: 100%;
+  overflow: hidden;
+}
+
